@@ -83,4 +83,5 @@
    3-Sep-2025  - V0.86 Update IMGTTargetProvider and other TargetProviders to fail upon download failure
    4-Sep-2025  - V0.87 Bump version to force new build (previous version built prematurely)
   21-Oct-2025  - V0.88 Adjust chunkSize for cofactor loading;
+                       Add fallback url source for Pharos TCRD data;
                        Switch to 'pyproject.toml' file and update test pipelines to python 3.13
